--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "angular-google-charts": "^0.1.6",
     "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
+    "eslint": ">=4.18.2",
     "ng2-charts": "^2.2.5",
     "rxjs": "~6.3.3",
+    "serialize-javascript": ">=2.1.1",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "webpack-dev-server": ">=3.1.11",
+    "zone.js": "~0.8.26"    
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.11.0",
